full-moon/tests/cases/fail/parser/method-call-2/error_display.snap
---
source: full-moon/tests/fail_cases.rs
assertion_line: 56
expression: "String::from_utf8(output.into_inner()).unwrap()"
input_file: full-moon/tests/cases/fail/parser/method-call-2
---
error[ast]: expected arguments after `:`
  ┌─ source.lua:1:13
  │
1 │ return name:method
  │             ^^^^^^


